# protkit

./: CHANGELOG.MD  CODE_OF_CONDUCT.md  CONTRIBUTING.md  QUICK_START_GUIDE.md  README.md  pyproject.toml  requirements.txt
docs/: index.html
docs/core/: extend_attributes.html  index.html
docs/download/: download.html  index.html
docs/file_io/: fasta_io.html  mmcif_io.html  pdb_io.html  prot_io.html
docs/geometry/: index.html  space_query.html
docs/metrics/: classification_eval.html  index.html  structure_eval.html
docs/properties/: bond_lengths.html  bounds.html  charge.html  chemical_class.html  circular_variance.html  dihedral_angles.html  donors_acceptors.html  hydrophobicity.html  index.html  interface.html  mass.html  polarity.html  surface_area.html  vdw_radius.html  volume.html
docs/seq/: antibody_sequence.html  index.html  nucleotide_sequence.html  protein_sequence.html  sequence.html  sequence_alignment.html
docs/structure/: atom.html  chain.html  index.html  protein.html  residue.html
docs/tasks/: index.html
docs/tools/: freesasa_adaptor.html  index.html  propka_adaptor.html  reduce_adaptor.html
html/protkit/file_io/: index.html  mmtf_io.html  pdb_io.html  pqr_io.html
html/protkit/geometry/: math.html
html/protkit/metrics/: regression_eval.html  scoring_matrix.html  sequence_eval.html  utility_eval.html
html/protkit/properties/: bond_angles.html  chemical_class.html  circular_variance.html  surface_area.html
html/protkit/structure/: atom.html  chain.html
html/protkit/tasks/: protonator.html  surface_area_calculator.html
html/protkit/tools/: freesasa_adaptor.html  index.html  pdb2pqr_adaptor.html
notebooks/: downloading_data.ipynb
protkit/: __init__.py
protkit/core/: __init__.py  extend_attributes.py
protkit/download/: __init__.py  download.py
protkit/file_io/: __init__.py  fasta_io.py  mmcif_io.py  mmtf_io.py  pdb_io.py  pqr_io.py  prot_io.py
protkit/geometry/: __init__.py  math.py  space_query.py
protkit/metrics/: __init__.py  classification_eval.py  regression_eval.py  scoring_matrix.py  sequence_eval.py  structure_eval.py  utility_eval.py
protkit/ml/: __init__.py  dataframe.py
protkit/properties/: __init__.py  bond_angles.py  bond_lengths.py  bounds.py  charge.py  chemical_class.py  circular_variance.py  dihedral_angles.py  donors_acceptors.py  hydrophobicity.py  interface.py  mass.py  polarity.py  surface_area.py  vdw_radius.py  volume.py
protkit/seq/: __init__.py  antibody_sequence.py  nucleotide_sequence.py  protein_sequence.py  sequence.py  sequence_alignment.py
protkit/structure/: __init__.py  atom.py  chain.py  protein.py  residue.py
protkit/tasks/: __init__.py  protonator.py  surface_area_calculator.py
protkit/tools/: __init__.py  freesasa_adaptor.py  pdb2pqr_adaptor.py  propka_adaptor.py  reduce_adaptor.py
tests/: quick_start_guide.py  test_featurizer.py
